@startuml

    !include lexakai.theme
    
    title "Data - Collection and Other Converters"
    
    abstract BaseListConverter
    abstract BaseCollectionConverter
    abstract BaseSetConverter
    abstract BaseStringConverter
    
    BaseStringConverter <|-- BaseCollectionConverter
    abstract class BaseCollectionConverter<T>
    {
        --(constructors)--
        #BaseCollectionConverter(Listener, String)
        --
        +String delimiter()
        --(extension points)--
        #T onConvertToObject(StringList)
        #StringList onConvertToStringList(T value)
    }
    
    BaseCollectionConverter <|-- BaseListConverter
    abstract class BaseListConverter<T>
    {
        --(constructors)--
        +BaseListConverter(Listener, StringConverter<T>, String)
    }
    
    BaseCollectionConverter <|-- BaseSetConverter
    abstract class BaseSetConverter<T>
    {
        --(constructors)--
        +BaseSetConverter(Listener, StringConverter<T>, String)
        --(collection)--
        #void sort(StringList)
    }
    
    BaseStringConverter <|-- ClassConverter
    class ClassConverter
    {
        --(constructors)--
        +ClassConverter(Listener)
    }
    
    BaseStringConverter <|-- EnumConverter
    class EnumConverter<T>
    {
        --(constructors)--
        +EnumConverter(Listener, Class<T>)
    }
    
    BaseListConverter <|-- EnumListConverter
    class EnumListConverter<T>
    {
        --(constructors)--
        +EnumListConverter(Listener, Class<T>)
    }
    
    BaseSetConverter <|-- EnumSetConverter
    class EnumSetConverter<T>
    {
        --(constructors)--
        +EnumSetConverter(Listener, Class<T>)
    }
    
    BaseStringConverter <|-- IdentityConverter
    class IdentityConverter
    {
        --(constructors)--
        +IdentityConverter(Listener)
    }
    
    BaseStringConverter <|-- PatternConverter
    class PatternConverter
    {
        --(constructors)--
        +PatternConverter(Listener)
    }
    
    BaseStringConverter <|-- ThrowableConverter
    class ThrowableConverter
    {
        --(constructors)--
        +ThrowableConverter(Listener)
    }
    
    BaseStringConverter <|-- VersionConverter
    class VersionConverter
    {
        --(constructors)--
        +VersionConverter(Listener)
    }
    
@enduml

